welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: too many arguments for method droite: ()Unit
droite(2);
      ^