welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite(2);
while (!estFaceMur) {
while (!estSurBiscuit) {
   avance();
}
	prendBiscuit();
while (!estSurBiscuit) {
	recule();
}
	avance();
	poseBiscuit();
}